[gd_scene load_steps=2 format=3 uid="uid://cg0dpkfqho8xs"]

[ext_resource type="Script" path="res://CEF.gd" id="1"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1")

[node name="CEF" type="GDCef" parent="."]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Mute" type="Button" parent="Panel/VBox/HBox"]
layout_mode = 2
text = "M"

[node name="Add" type="Button" parent="Panel/VBox/HBox"]
layout_mode = 2
text = "+"

[node name="TabBar" type="Label" parent="Panel/VBox/HBox"]
layout_mode = 2
mouse_filter = 0
text = "TabBar:"

[node name="BrowserList" type="OptionButton" parent="Panel/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="URL" type="Label" parent="Panel/VBox/HBox"]
layout_mode = 2
mouse_filter = 0
text = "URL:"

[node name="TextEdit" type="LineEdit" parent="Panel/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Prev" type="Button" parent="Panel/VBox/HBox"]
layout_mode = 2
text = "<"

[node name="Home" type="Button" parent="Panel/VBox/HBox"]
layout_mode = 2
text = "Home"

[node name="BGColor" type="Button" parent="Panel/VBox/HBox"]
layout_mode = 2
text = "Color"

[node name="Next" type="Button" parent="Panel/VBox/HBox"]
layout_mode = 2
text = ">"

[node name="Info" type="Label" parent="Panel/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
text = "info"

[node name="TextureRect" type="TextureRect" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
expand_mode = 1
stretch_mode = 3

[node name="ColorPopup" type="Popup" parent="."]

[node name="ColorPicker" type="ColorPicker" parent="ColorPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
edit_alpha = false
presets_visible = false

[connection signal="pressed" from="Panel/VBox/HBox/Mute" to="." method="_on_Mute_pressed"]
[connection signal="pressed" from="Panel/VBox/HBox/Add" to="." method="_on_Add_pressed"]
[connection signal="item_selected" from="Panel/VBox/HBox/BrowserList" to="." method="_on_BrowserList_item_selected"]
[connection signal="text_changed" from="Panel/VBox/HBox/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Panel/VBox/HBox/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="Panel/VBox/HBox/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Panel/VBox/HBox/BGColor" to="." method="_on_BGColor_pressed"]
[connection signal="pressed" from="Panel/VBox/HBox/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Panel/VBox/HBox/Next" to="." method="_on_Prev_pressed"]
[connection signal="gui_input" from="Panel/VBox/TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="resized" from="Panel/VBox/TextureRect" to="." method="_on_texture_rect_resized"]
[connection signal="color_changed" from="ColorPopup/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
